tests/not-non-return.rs
use auto_vec::auto_vec;

#[auto_vec]
fn foo(i: i32) {}

fn main() {}
